--- a/server/src/CRM.Enterprise.Api/appsettings.Development.json
+++ b/server/src/CRM.Enterprise.Api/appsettings.Development.json
@@ -15,6 +15,11 @@
       "demo"
     ]
   },
+  "SendGrid": {
+    "ApiKey": "",
+    "FromEmail": "",
+    "FromName": "CRM Enterprise"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
