--- a/server/src/CRM.Enterprise.Api/appsettings.json
+++ b/server/src/CRM.Enterprise.Api/appsettings.json
@@ -6,6 +6,11 @@
     "DefaultKey": "default",
     "HostSuffix": ""
   },
+  "SendGrid": {
+    "ApiKey": "",
+    "FromEmail": "",
+    "FromName": "CRM Enterprise"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
