--- a/server/src/CRM.Enterprise.Infrastructure/CRM.Enterprise.Infrastructure.csproj
+++ b/server/src/CRM.Enterprise.Infrastructure/CRM.Enterprise.Infrastructure.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+    <PackageReference Include="SendGrid" Version="9.29.3" />
   </ItemGroup>
 
   <PropertyGroup>
