--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
   "packageManager": "npm@10.9.4",
   "dependencies": {
     "@angular/animations": "~21.0.8",
+    "@angular/cdk": "^21.0.6",
     "@angular/common": "~21.0.8",
     "@angular/compiler": "~21.0.8",
     "@angular/core": "~21.0.8",
